[package]
name = "pygui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyframe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.25", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-log = "=0.12"
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
pyo3-async-runtimes-macros = { version = "0.25" }
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.91"
futures = "0.3.31"
serde_json = "1.0.93"
tao = { version = "0.34.0", features = ["serde"] }
wry = { version ="0.52.1", features = ["devtools"] }
once_cell = "1.21.3"